# smart-task

./: Cargo.toml  Dockerfile
.cursor/rules/: general-rule.mdc  kubenetes-rule.mdc  rust-rule.mdc
.github/workflows/: deploy_image.yml
.github/workflows/script/: retrive_version.sh
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/model/: project.rs  tag.rs  task.rs
crates/domain/src/repository/: mod.rs  project.rs  tag.rs  task.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/infra/src/database/: connection_provider.rs  error.rs  mod.rs
crates/infra/src/database/entity/: mod.rs  project.rs  tag.rs  tag_task.rs  task.rs
crates/infra/src/repository/: mod.rs  project.rs  tag.rs  task.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240320_000001_create_table.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: lib.rs
crates/openapi/src/model/: error.rs  tag.rs  task.rs
crates/openapi/src/models/: error.rs  mod.rs  project.rs
crates/openapi/src/request/: project.rs  tag.rs  task.rs
crates/openapi/src/response/: mod.rs  project.rs  tag.rs  task.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/src/dto/: error.rs  mod.rs  project.rs  tag.rs  task.rs
crates/server/src/endpoint/: mod.rs  project.rs  tag.rs  task.rs
crates/server/src/error/: error_response.rs  mod.rs
crates/server/tests/: mod.rs
crates/server/tests/client/: mod.rs  project.rs  tag.rs  task.rs
crates/server/tests/endpoint/: mod.rs  project.rs  tag.rs  task.rs  test_helper.rs
doc/: Gatewayの利用方法.md  kindの導入.md  ローカルでの開発環境.md
kubernetes/: dev-cluster.yaml  start-up.sh  tear-down.sh
kubernetes/bases/: configmap-api-server.yaml  deployment-api-server.yaml  gateway.yaml  httproute-api-server.yaml  kustomization.yaml  namespace.yaml  service-api-server.yaml
kubernetes/overlays/development/: kustomization.yaml  patch-configmap-api-server.yaml  patch-deployment-api-server.yaml  patch-namespace.yaml
src/: environment.rs  main.rs
