[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A simple todo application"
repository = "https://github.com/shunm-999/smart-task"

[package]
name = "smart-task"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[workspace]
members = [
    "crates/openapi",
    "crates/server",
    "crates/domain",
    "crates/infra",
]

[workspace.dependencies]
openapi = { path = "./crates/openapi" }
server = { path = "./crates/server" }
domain = { path = "./crates/domain" }
infra = { path = "./crates/infra" }

smart_task_openapi_axum = { version = "1.0.11"}

chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_with = "3.8.1"
actix-web = { version = "4.6.0", default-features = false, features = [
    "macros",
    "rustls-0_23",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "cookies",
] }

[dependencies]
actix-web = { workspace = true }
