[workspace.package]
version = "0.1.0"
edition = "2021"
description = "A simple todo application"
repository = "https://github.com/shunm-999/smart-task"

[package]
name = "smart-task"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[workspace]
members = [
    "crates/openapi",
    "crates/server",
    "crates/domain",
    "crates/infra",
]

[workspace.dependencies]
openapi = { path = "./crates/openapi" }
server = { path = "./crates/server" }
domain = { path = "./crates/domain" }
infra = { path = "./crates/infra" }

smart_task_openapi_axum = { version = "1.1.0" }

actix-web = { version = "4.6.0", default-features = false, features = [
    "macros",
    "rustls-0_23",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "cookies",
] }
chrono = { version = "0.4.39", features = ["serde"] }
sea-orm = {version = "1.1.4", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio", "macros"]}
serde = { version = "1.0.202", features = ["derive"] }
paste = "1.0.15"
serde_with = "3.8.1"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
uuid = { version = "1.8.0", features = ["serde", "v7"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies]
server = { workspace = true }
infra = { workspace = true }

actix-web = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }

