[package]
name = "infra"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
migration = { workspace = true }

chrono = { workspace = true }
domain = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }
