[package]
name = "migration"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
tokio = { workspace = true }
