[package]
name = "openapi"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
smart_task_openapi_axum = { workspace = true}

actix-web = { workspace = true }
chrono = { workspace = true }
paste = "1.0.15"
serde = { workspace = true }
serde_json = { workspace = true}
