[package]
name = "server"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
openapi = { workspace = true }
domain = { workspace = true }

actix-web = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }